# MiniGods

./: .gitignore  build.gradle  gradle.properties
app/: .gitignore  build.gradle  google-services.json
app/release/: deployment_cert.der  output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/fontData/: FontData3.csv  FontData4.csv  MS Serif.bff  fontData.csv  fontData2.csv
app/src/main/assets/models/dog/: AggressiveAttack.max  AggressiveAttackTwo.max  AggressiveBarking.max  AggressiveBeingHit.max  AggressiveBeingHitThree.max  AggressiveBeingHitTwo.max  AggressiveIdle.max  AggressiveToIdle.max  ConsumeToIdle.max  Death.max  Default.max  Drink.max  Eat.max  (+30 more)
app/src/main/assets/shaders/: fragment.glsl  vertex.glsl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/impl/main/: main.cpp
app/src/main/cpp/impl/rendering/: CMakeLists.txt  OGLManager.cpp
app/src/main/cpp/impl/rendering/model/: CMakeLists.txt  ModelLoader.cpp
app/src/main/cpp/impl/rendering/renderers/: CMakeLists.txt  PlayerRenderer.cpp
app/src/main/cpp/include/rendering/: OGLManager.h
app/src/main/cpp/include/rendering/model/: ModelLoader.h
app/src/main/cpp/include/rendering/renderers/: PlayerRenderer.h  RendererInterface.h
app/src/main/cpp/port/AndroidJNI/: AndroidJNIIOSystem.cpp  CMakeLists.txt
app/src/main/res/drawable/: ic_app_vector.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_app.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
